fix: use Vercel Serverless Functions for API proxy
- Create serverless functions for Moltbook, ClawNews, and Clawnch APIs
- Properly forward Authorization headers and request body
- Update vercel.json to use serverless functions instead of external rewrites
- This fixes 401 errors caused by headers not being forwarded correctly

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/moltbook/:path*", "destination": "https://www.moltbook.com/api/v1/:path*" },
-    { "source": "/api/clawnews/:path*", "destination": "https://clawnews.io/:path*" },
-    { "source": "/api/clawnch/:path*", "destination": "https://clawn.ch/api/:path*" },
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/((?!api/).*)", "destination": "/" }
   ]
 }
